Added required field to password

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -19,10 +19,10 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Your Password *" value=""/>
+                        <input type="password" class="form-control" placeholder="Your Password *" value="" required minlength="6"/>
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Confirm Password *" value=""/>
+                        <input type="password" class="form-control" placeholder="Confirm Password *" value="" required minlength="6" />
                     </div>
                 </div>
             </div>
