--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-register></app-register>
+
+<div class="container">
+    <div class="row">
+      <div
+       class="col-12">
+       <app-register></app-register>
+      </div>
+    </div>
+</div>
