--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,32 +1,28 @@
-<div class="container register-form">
-    <div class="form">
-        <div class="note">
-            <p>Please fill in the info for signup.</p>
-        </div>
+<form>
+  <ngb-carousel>
+    <ng-template ngbSlide>
+       <div class="picsum-img-wrapper p-5">
+        <img [src]="images[0]" alt="Random first slide">
+       
+      </div> 
+      <div class="form-group carousel-caption d-flex flex-column align-items-center">    
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control w-50" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">   
+        <small id="emailHelp" class="form-text text-danger">We'll never share your email with anyone else.</small>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper p-5">
+       <img [src]="images[1]" alt="Random first slide">     
+     </div> 
+     <div class="form-group carousel-caption d-flex flex-column align-items-center">    
+       <label for="exampleInputEmail1">Email address</label>
+       <input type="email" class="form-control w-50" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">   
+       <small id="emailHelp" class="form-text text-danger">We'll never share your email with anyone else.</small>
+     </div>
+   </ng-template>
+  </ngb-carousel>
+</form>
 
-        <div class="form-content">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Your Name *" value=""/>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Phone Number *" value=""/>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Email *" value=""/> 
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Your Password *" value="" required minlength="6"/>
-                    </div>
-                    <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Confirm Password *" value="" required minlength="6" />
-                    </div>
-                </div>
-            </div>
-            <button type="button" class="btnSubmit">Submit</button>
-        </div>
-    </div>
-</div>
+
+  
