--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,9 +1,10 @@
 <div class="regForm container m-2">
   <form class="border p-3">
-    
+
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control w-50" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <input type="email" class="form-control w-50" id="exampleInputEmail1" aria-describedby="emailHelp"
+        placeholder="Enter email">
       <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
     </div>
     <div class="d-flex justify-content-end">
