--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,15 +1,17 @@
-<div class="regForm container m-2">
-  <form class="border p-3">
-
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control w-50" id="exampleInputEmail1" aria-describedby="emailHelp"
-        placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+<div class="bg-banner">
+  <div class="d-flex flex-wrap align-content-center justify-content-center" style="height:100vh;">
+    <div class="container">   
+        <form class="border p-3 mb-2 bg-white">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control w-50" id="exampleInputEmail1" aria-describedby="emailHelp"
+              placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+          <div class="d-flex justify-content-end">
+            <button type="submit" class="btn btn-primary ">Next</button>
+          </div>
+        </form> 
     </div>
-    <div class="d-flex justify-content-end">
-      <button type="submit" class="btn btn-primary ">Next</button>
-    </div>
-
-  </form>
+  </div>
 </div>
