--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -5,3 +5,9 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+.reg-form{
+    -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+}
+ 
