--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,17 +1,52 @@
 <div class="bg-banner">
   <div class="d-flex flex-wrap align-content-center justify-content-center" style="height:100vh;">
-    <div class="container">   
-        <form class="border p-3 mb-2 bg-white">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control w-50" id="exampleInputEmail1" aria-describedby="emailHelp"
-              placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <div class="container">
+      <form class=" p-3 mb-2 bg-white reg-form rounded">
+        <h4 class="mb-4">Register with us!</h4>
+        <div class="row">
+          <div class="col-6">
+            <div class="form-group">
+              <label for="fname">First Name</label>
+              <input class="form-control w-50" id="fname" placeholder="Enter First Name">
+            </div>
+            <div class="form-group">
+              <label for="lname">Last Name</label>
+              <input class="form-control w-50" id="lname" placeholder="Enter Last Name">
+            </div>
+            <div>
+              <label class="mr-2">Gender</label>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
+                  value="option1">
+                <label class="form-check-label" for="inlineRadio1">Female</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
+                  value="option2">
+                <label class="form-check-label" for="inlineRadio2">Male</label>
+              </div>
+            </div>
+       
           </div>
-          <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary ">Next</button>
+          <div class="col-6">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control w-75" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control w-75" id="password" placeholder="Enter password">
+            </div>
           </div>
-        </form> 
+        </div>
+
+
+        <div class="d-flex justify-content-end">
+          <button type="submit" class="btn btn-primary ">Submit</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
