--- a/src/app/Authentication/register/register.component.css
+++ b/src/app/Authentication/register/register.component.css
@@ -1,5 +1,5 @@
 .bg-banner {
-  background-image: url("../../assets/images/reg-form-1.jpg");
+  background-image: url("../../../assets/images/reg-form-1.jpg");
   height: 100%; 
   background-position: center;
   background-repeat: no-repeat;
