Text allinged center

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div>
     
-
+<h1>Welcome to Book Finder</h1>
     <nav>
         <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
         <li><a routerLink="/register" routerLinkActive="active">Register</a></li>
