--- a/src/app/Authentication/login/login.component.html
+++ b/src/app/Authentication/login/login.component.html
@@ -10,5 +10,6 @@
         placeholder="Enter Password">
      </div>
 
-     <button type="submit">Login</button>
+     <button type="submit" class="btn btn-outline-info">Log In</button>
+
 </div>
