--- a/src/app/Authentication/register/register.component.html
+++ b/src/app/Authentication/register/register.component.html
@@ -1,15 +1,36 @@
 <div class="bg-banner">
   <div class="d-flex flex-wrap align-content-center justify-content-center" style="height:100vh;">
+   
     <div class="container">   
-        <form class="border p-3 mb-2 bg-white">
+      
+        <form class="border p-3 mb-2 bg-white w-75 rounded">
+          <h4 class="text-primary mb-4">Basic Details</h4>
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control w-50" id="exampleInputEmail1" aria-describedby="emailHelp"
+            <div class="form-group">
+              <label for="regName">Name</label>
+              <input type="text" class="form-control w-50" id="regName" aria-describedby="emailHelp"
+                placeholder="Name">
+      
+            </div>
+            <label for="exampleInputEmail">Email address</label>
+            <input type="email" class="form-control w-50" id="exampleInputEmail" aria-describedby="emailHelp"
               placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
-          <div class="d-flex justify-content-end">
-            <button type="submit" class="btn btn-primary ">Next</button>
+          <div class="form-group">
+            <label for="regPassword">Enter Password</label>
+            <input  class="form-control w-50" id="regPassword" aria-describedby="emailHelp"
+              placeholder="Your password">
+    
+          </div>
+          <div class="form-group">
+            <label for="regPassword">Confirm Password</label>
+            <input type="email" class="form-control w-50" id="regPassword" aria-describedby="emailHelp"
+              placeholder="Confirm password">
+    
+          </div>
+          <div class="d-flex justify-content-start mt-4 mb-2">
+            <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </form> 
     </div>
