--- a/src/app/Authentication/login/login.component.html
+++ b/src/app/Authentication/login/login.component.html
@@ -1,4 +1,8 @@
-<div>
+<div class="md-banner">
+    <div class="d-flex flex-wrap align-content-center justify-content-center" style="height:50vh;">
+    <div class="container">
+        <form class="border p-3 mb-2 bg-white w-75 rounded">
+          <h4 class="text-primary mb-4">Login Details</h4>
     <div class='form-group'>
         <input type="email" class="form-control w-50" id="exampleInputEmail1" aria-describedby="emailHelp"
         placeholder="Enter email">
@@ -12,4 +16,7 @@
 
      <button type="submit" class="btn btn-outline-info">Log In</button>
 
+     <button type="submit" class="btn btn-outline-dark">Forgot Password</button>
+     </form>    
+</div>
 </div>
