--- a/src/app/Authentication/register/register.component.html
+++ b/src/app/Authentication/register/register.component.html
@@ -3,34 +3,52 @@
    
     <div class="container">   
       
-        <form class="border p-3 mb-2 bg-white w-75 rounded">
-          <h4 class="text-primary mb-4">Basic Details</h4>
-          <div class="form-group">
+        <form class="border p-3 mb-2 bg-white w-75 rounded" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+          <div class="d-flex justify-content-between">
+            <h4 class="text-primary mb-2">Basic Details</h4>
+            <small class="text-danger pt-1">*All fields are mandatory</small>
+          </div>
+          
+          
             <div class="form-group">
               <label for="regName">Name</label>
-              <input type="text" class="form-control w-50" id="regName" aria-describedby="emailHelp"
-                placeholder="Name">
-      
+              <input type="text" formControlName="userName" class="form-control w-50" id="regName" aria-describedby="emailHelp"
+                placeholder="Name" [ngClass]="{ 'is-invalid': submitted && f.userName.errors }" >
+                <div *ngIf="submitted && f.userName.errors" class="invalid-feedback">
+                  <span *ngIf="f.userName.errors.required">First Name is required</span>
+              </div>
             </div>
+            <div class="form-group">
             <label for="exampleInputEmail">Email address</label>
-            <input type="email" class="form-control w-50" id="exampleInputEmail" aria-describedby="emailHelp"
-              placeholder="Enter email">
+            <input type="email" formControlName="email" class="form-control w-50" id="exampleInputEmail" aria-describedby="emailHelp"
+              placeholder="Enter email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+              <span *ngIf="f.email.errors.required">Email is required</span>
+              </div>
           </div>
-          <div class="form-group">
+           <div class="form-group">
             <label for="regPassword">Enter Password</label>
-            <input  class="form-control w-50" id="regPassword" aria-describedby="emailHelp"
-              placeholder="Your password">
+            <input  formControlName="password" class="form-control w-50" id="regPassword" aria-describedby="emailHelp"
+              placeholder="Your password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+              <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                <span *ngIf="f.password.errors.required">Password is required</span>
+                </div>
+                
     
           </div>
           <div class="form-group">
             <label for="regPassword">Confirm Password</label>
-            <input type="email" class="form-control w-50" id="regPassword" aria-describedby="emailHelp"
-              placeholder="Confirm password">
+            <input formControlName="confirmPassword" type="email" class="form-control w-50" id="regPassword" aria-describedby="emailHelp"
+              placeholder="Confirm password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+              <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+                <span *ngIf="f.confirmPassword.errors.required">Password is required</span>
+                </div>
     
-          </div>
+          </div> 
           <div class="d-flex justify-content-start mt-4 mb-2">
             <button type="submit" class="btn btn-primary">Submit</button>
+            <button class="btn btn-secondary ml-3" type="reset" (click)="onReset()">Cancel</button>
           </div>
         </form> 
     </div>
